@@ -2778,6 +2778,13 @@ Example : wizlist\n\r\
 Short(s): \n\r\
 Shows a list of all the Archons on this mud.
 
+WORTH=\
+Command : WORTH\n\r\
+Usage   : WORTH\n\r\
+Example : worth\n\r\
+Short(s): \n\r\
+Shows all of your money on-hand.
+
 YELL=\
 Command : YELL\n\r\
 Usage   : YELL ([MOB NAME]/[DIRECTION]) [MESSAGE]\n\r\
